@@ -21,6 +21,19 @@ Mod(84, 148)
 [599, 599, 599, 599]
 [1000000003700000003419, 1000000003700000003419, 1000000003700000003419, 100
 0000003700000003419]
+[8000000029600000027360, [1000000003700000003420, 2, 2, 2]]
+[392658269393604457523, 74265827068860445865, 1, 1]~
+[8000000029600000027360, [1000000003700000003420, 2, 2, 2], [697836335347937
+5237713, 5000000019000000018049, 15000000057000000054151, 100000000380000000
+36101]]
+[392658269393604457523, 74265827068860445865, 1, 1]~
+Mod(3, 20000000076000000072200)
+  ***   at top-level: znlog(Mod(3,N/2),G)
+  ***                 ^-------------------
+  *** znlog: inconsistent moduli in Rg_to_Fp: 10000000038000000036100 != 20000000076000000072200
+  ***   at top-level: znlog(G,3)
+  ***                 ^----------
+  *** znlog: incorrect type in znlog (t_INT).
 []
 []
 []
@@ -170,4 +183,4 @@ x^2
 [0]~
 [0]~
 [15, [3, 1; 5, 1]]
-Total time spent: 1280
+Total time spent: 1436
