@@ -22,7 +22,17 @@ do(n)= {
   [znlog(G,g), znlog(G,g,o), znlog(G,g,fo), znlog(G,g,[o,fo])];
 }
 do(2^5*5^3*7)
-do(2^3*5^2*nextprime(10^10)^2)
+N = 2^3*5^2*nextprime(10^10)^2;
+do(N)
+G = znstar(N,1);
+G.clgp
+znlog(3, G)
+G = znstar(N,2);
+G.clgp
+L=znlog(Mod(3,N), G)
+factorback(Mod(G.gen,N),L)
+znlog(Mod(3,N/2), G)
+znlog(G,3)
 
 znlog(7,Mod(3,8),znorder(Mod(3,8)))
 znlog(7,Mod(3,8))
